--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ eframe = { version = "0.33.0", default-features = false, features = [
     "persistence",
 ] }
 log = "0.4.27"
-
 serde = { version = "1.0.219", features = ["derive"] }
 wasm-bindgen-futures = "0.4.50"
 web-sys = "0.3.70"
 egui_plot = "0.34.0"
+can-dbc = "6.0.0"
 
 [profile.release]
 opt-level = 2
