--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ web-sys = "0.3.70"
 egui_plot = "0.34.0"
 can-dbc = "6.0.0"
 rfd = "0.15.4"
+chrono = { version = "0.4.42", features = ["serde"] }
+regex = "1.12.2"
+regex-macro = "0.3.0"
+bincode = { version = "2.0.1", features = ["serde"] }
+base64 = "0.22.1"
 
 [profile.release]
 opt-level = 2
