--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -25,7 +25,8 @@ base64 = "0.22.1"
 hex = "0.4.3"
 
 [profile.release]
-opt-level = 2
+opt-level = 3
+lto = "thin"
 
 [profile.dev.package."*"]
 opt-level = 2
