--- a/websocket/Cargo.toml
+++ b/websocket/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
-name = "websocket"
+name = "websocket-server"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+futures-util = "0.3.31"
+socketcan = { version = "3.5.0", features = ["tokio"] }
+tokio = { version = "1.48.0", features = ["macros", "net", "rt", "sync"] }
+tokio-tungstenite = "0.28.0"
