--- a/websocket/Cargo.toml
+++ b/websocket/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenvy = "0.15.7"
 futures-util = "0.3.31"
 socketcan = { version = "3.5.0", features = ["tokio"] }
 tokio = { version = "1.48.0", features = ["macros", "net", "rt", "sync"] }
