--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -23,6 +23,9 @@ regex-macro = "0.3.0"
 bincode = { version = "2.0.1", features = ["serde"] }
 base64 = "0.22.1"
 hex = "0.4.3"
+gloo-net = "0.6.0"
+futures = "0.3.31"
+num-format = "0.4.4"
 
 [profile.release]
 opt-level = 3
